[gd_scene load_steps=6 format=2]

[ext_resource path="res://world1.gd" type="Script" id=1]
[ext_resource path="res://player1.tscn" type="PackedScene" id=2]
[ext_resource path="res://hudcanvas layer.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 5, -4, 0, 0, 0, 0, 1021, 0 )
}

[sub_resource type="Environment" id=2]
glow_enabled = true
glow_intensity = 1.5
glow_bloom = 1.0
glow_blend_mode = 0

[node name="world1node" type="Node"]
script = ExtResource( 1 )

[node name="player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 830, 392 )
priority = 1.0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 5, -4 )
rotation = 0.00393689

[node name="enemyspawntime" type="Timer" parent="."]

[node name="enemylevel2time" type="Timer" parent="."]
process_mode = 0
wait_time = 2.5

[node name="Hud" parent="." instance=ExtResource( 3 )]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="enemylevel3time" type="Timer" parent="."]
wait_time = 4.0

[connection signal="gamestart" from="." to="player1" method="_on_world1node_gamestart"]
[connection signal="playerzero" from="." to="player1" method="_on_world1node_playerzero"]
[connection signal="area_entered" from="player1" to="." method="_on_player1_area_entered"]
[connection signal="timeout" from="enemyspawntime" to="." method="_on_enemyspawntime_timeout"]
[connection signal="timeout" from="enemylevel2time" to="." method="_on_enemylevel2time_timeout"]
[connection signal="gamestart" from="Hud" to="." method="_on_Hud_gamestart"]
